@@ -1,5 +1,7 @@
 2000-02-01  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
+	* Array-idx.h: Avoid shadowing warnings for idx.
+
 	* Quad.h: Use do_integrate as name of pure virtual function.
 
 	* base-de.h: Use tt instead of t as arg names.
